# RGB-Only-SfM

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
dockerfiles/: Dockerfile
include/: AppConfig.h  BundleAdjuster.h  DataParser.h  Eigen.h  PointCloud.h  SimpleBundleAdjuster.h  SimpleMesh.h  Utils.h  VirtualSensor.h
resources/config/: config.json
resources/scripts/: plot_loss.py  plot_reproject_error.py  plot_results.py  run_tests.py
src/: AppConfig.cpp  BundleAdjuster.cpp  bundle_adjustment.cpp  main.cpp  opencv_hello_world.cpp
test/: bundle_adjuster_tests.cpp
